Fix spacing for inline component correct answer

--- a/components/corespring/drag-and-drop-inline/src/client/styles.less
+++ b/components/corespring/drag-and-drop-inline/src/client/styles.less
@@ -195,7 +195,7 @@
     margin-bottom: 10px;
   }
 
-  .answer-area-holder {
+  .answer-area-holder, .correct-answer-area-holder {
     &.warning {
       border-radius: 4px;
       padding: 1em;
